--- a/examples/ZAP_2.4.3_report-merged.html
+++ b/examples/ZAP_2.4.3_report-merged.html
@@ -234,7 +234,7 @@
 <tr bgcolor="#e8e8e8" valign="top">
 <td width="20%"><font size="2" face="Arial, Helvetica, sans-serif">
 <p>Reference</p>
-</font></td><td width="80%"><font size="2" face="Arial, Helvetica, sans-serif"><p>https://www.owasp.org/index.php/Top_10_2010-A1</p><p>https://www.owasp.org/index.php/SQL_Injection_Prevention_Cheat_Sheet</p></font></td>
+</font></td><td width="80%"><font size="2" face="Arial, Helvetica, sans-serif"><p>https://www.shjtest.com/index.php/Top_10_2010-A1</p><p>https://www.shjtest.com/index.php/SQL_Injection_Prevention_Cheat_Sheet</p></font></td>
 </tr>
   
 <tr bgcolor="#e8e8e8" valign="top">
@@ -1675,7 +1675,7 @@ Host: localhost:8080
 <tr bgcolor="#e8e8e8" valign="top">
 <td width="20%"><font size="2" face="Arial, Helvetica, sans-serif">
 <p>Reference</p>
-</font></td><td width="80%"><font size="2" face="Arial, Helvetica, sans-serif"><p>https://www.owasp.org/index.php/Buffer_overflow_attack</p></font></td>
+</font></td><td width="80%"><font size="2" face="Arial, Helvetica, sans-serif"><p>https://www.shjtest.com/index.php/Buffer_overflow_attack</p></font></td>
 </tr>
   
 <tr bgcolor="#e8e8e8" valign="top">
@@ -2505,7 +2505,7 @@ Host: localhost:8080
 <tr bgcolor="#e8e8e8" valign="top">
 <td width="20%"><font size="2" face="Arial, Helvetica, sans-serif">
 <p>Reference</p>
-</font></td><td width="80%"><font size="2" face="Arial, Helvetica, sans-serif"><p>https://www.owasp.org/index.php/Format_string_attack</p></font></td>
+</font></td><td width="80%"><font size="2" face="Arial, Helvetica, sans-serif"><p>https://www.shjtest.com/index.php/Format_string_attack</p></font></td>
 </tr>
   
 <tr bgcolor="#e8e8e8" valign="top">
@@ -2855,7 +2855,7 @@ Host: localhost:8080
 <tr bgcolor="#e8e8e8" valign="top">
 <td width="20%"><font size="2" face="Arial, Helvetica, sans-serif">
 <p>Reference</p>
-</font></td><td width="80%"><font size="2" face="Arial, Helvetica, sans-serif"><p>https://www.owasp.org/index.php/XSS_(Cross_Site_Scripting)_Prevention_Cheat_Sheet</p><p>https://blog.veracode.com/2014/03/guidelines-for-setting-security-headers/</p></font></td>
+</font></td><td width="80%"><font size="2" face="Arial, Helvetica, sans-serif"><p>https://www.shjtest.com/index.php/XSS_(Cross_Site_Scripting)_Prevention_Cheat_Sheet</p><p>https://blog.veracode.com/2014/03/guidelines-for-setting-security-headers/</p></font></td>
 </tr>
   
 <tr bgcolor="#e8e8e8" valign="top">
@@ -3205,7 +3205,7 @@ Host: localhost:8080
 <tr bgcolor="#e8e8e8" valign="top">
 <td width="20%"><font size="2" face="Arial, Helvetica, sans-serif">
 <p>Reference</p>
-</font></td><td width="80%"><font size="2" face="Arial, Helvetica, sans-serif"><p>http://msdn.microsoft.com/en-us/library/ie/gg622941%28v=vs.85%29.aspx</p><p>https://www.owasp.org/index.php/List_of_useful_HTTP_headers</p></font></td>
+</font></td><td width="80%"><font size="2" face="Arial, Helvetica, sans-serif"><p>http://msdn.microsoft.com/en-us/library/ie/gg622941%28v=vs.85%29.aspx</p><p>https://www.shjtest.com/index.php/List_of_useful_HTTP_headers</p></font></td>
 </tr>
   
 <tr bgcolor="#e8e8e8" valign="top">
@@ -4143,7 +4143,7 @@ Host: localhost:8080
 <tr bgcolor="#e8e8e8" valign="top">
 <td width="20%"><font size="2" face="Arial, Helvetica, sans-serif">
 <p>Reference</p>
-</font></td><td width="80%"><font size="2" face="Arial, Helvetica, sans-serif"><p>www.owasp.org/index.php/HttpOnly</p></font></td>
+</font></td><td width="80%"><font size="2" face="Arial, Helvetica, sans-serif"><p>www.shjtest.com/index.php/HttpOnly</p></font></td>
 </tr>
   
 <tr bgcolor="#e8e8e8" valign="top">
